internal/octogo/testdata/16_for_loops.ogo
// COMPILE

func testForLoops() {
	var i int = 0
	var running bool = true

	// Valid: Single boolean condition
	for running {
		i = i + 1
		if i > 10 {
			running = false
		}
	}

	// Valid: Infinite loop (absent condition evaluates to true)
	for {
		// Break isn't explicitly in the current EBNF snippet,
		// but assuming returning works to escape.
		return
	}

	// ERROR "non-bool used as for condition|mismatched types"
	for i {
		i = i - 1
	}
}
